--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- VWB 1-30-2023: Changed the title and added a meta description. Added reset.css -->
 <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Horiseon will improve your website's search engine optimization, online reputation management and social media marketing."/> 
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Refactor</title>
+    <title>Horiseon SEO Services</title>
 </head>
-
 <body>
+<!-- VWB 1-30-2023: I am not sure about the use of span here. Perhaps a logo image would be better?-->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,59 +27,63 @@
             </ul>
         </div>
     </header>
-    <div class="hero"></div>
+<!-- VWB 1-30-2023: Changed div to section. -->
+    <section class="hero"></section>
     <main class="content">
-        <div id="search-engine-optimization" class="seo-section">
+        <section id="search-engine-optimization" class="seo-section">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="seo-section">
+        </section>
+        <section id="online-reputation-management" class="seo-section">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="seo-section">
+        </section>
+        <section id="social-media-marketing" class="seo-section">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </section>
     </main>
-    <div class="benefits">
-        <div class="benefit-lead">
+<!-- VWB 1-30-2023: Changed div to aside or section. -->
+    <aside class="benefits">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+        </section>
+    </aside>
+</body>
+<!-- VWB 1-30-2023: Added a footer. -->
+<footer>
+    <section class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
-</body>
-
+    </section> 
+</footer>
 </html>
